Simplify code via immutable collections introduced in Java 11